--- a/.github/workflows/monkey.yml
+++ b/.github/workflows/monkey.yml
@@ -33,7 +33,8 @@ jobs:
             key: ${{ secrets.AWS_SECURITY_KEY }}
             script: |
                 sudo docker pull ${{ vars.DOCKER_USERNAME }}/santana
-                sudo docker run --name=santana -p 8000:80 -d ${{ vars.DOCKER_USERNAME }}/santana
+                sudo docker rm -f santana
+                sudo docker run --name=santana -p 80:80 -d ${{ vars.DOCKER_USERNAME }}/santana
 
 
 
